# telegram_ai_assistant

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  docker-compose.yml  pyproject.toml
docs/operations/: local-runbook.md  manual-unread-smoke-test.md
docs/superpowers/plans/: 2026-06-02-live-telegram-ingestor.md  2026-06-02-production-wiring-base.md  2026-06-02-telegram-ai-assistant-full-mvp.md  (+14 more)
src/telegram_ai_assistant/: app_context.py  backfill.py  bot_api.py  bot_router.py  bot_runtime.py  bot_services.py  cli.py  config.py  content.py  domain.py  env.py  extraction.py  filtering.py  health.py  llm.py  llm_client.py  logging_config.py  runtime.py  security.py  status.py  telegram_readonly.py  worker.py
tests/: test_app_context.py  test_backfill.py  test_backfill_service.py  test_bot_api.py  test_bot_router.py  test_bot_runtime.py  test_bot_services.py  test_chat_policy.py  test_cli.py  test_cli_entrypoint.py  test_cli_health_online.py  test_cli_migrate.py  test_config.py  test_content.py  test_db_connection.py  test_db_schema.py  test_docker_packaging.py  test_domain.py  test_env.py  test_extraction.py  test_filtering.py  test_health.py  test_ingestion_normalizer.py  test_ingestion_ports.py  test_live_ingestor.py  test_live_update_listener.py  test_llm.py  test_llm_action_fixtures.py  test_llm_client.py  test_logging_config.py  test_online_health.py  test_operations_docs.py  test_project_metadata.py  test_repositories.py  test_runtime.py  test_security.py  test_status.py  test_telegram_readonly.py  test_worker.py
tests/fixtures/: llm_actions_ru.json
(+28 files in other folders)
