[project]
name = "telegram-ai-assistant"
version = "0.1.0"
description = "Local-first Telegram AI assistant"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2",
    "telethon>=1.36",
]

[project.scripts]
telegram-ai-assistant = "telegram_ai_assistant.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
